--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,76 +1,76 @@
-     <!-- footer section start --> 
-     <div class="footer_section layout_padding">
-        <div class="container">
-           <div class="newsletter_section">
-              <div class="newsletter_left">
-                 <div class="footer_logo"><img src="/images/footer-logo.png"></div>
-              </div>
-              <div class="newsletter_right">
-                 <h5 class="newsletter_taital">Subscribe Newsletter</h5>
-                 <div class="subscribe_main">
-                    <input type="text" class="mail_text" placeholder="Enter your email" name="text">
-                    <div class="subscribe_bt"><a href="#">Subscribe</a></div>
-                 </div>
-              </div>
-           </div>
-           <div class="footer_taital_main">
-              <div class="row">
-                 <div class="col-lg-3 col-sm-6">
-                    <h2 class="useful_text">About</h2>
-                    <p class="ipsum_text">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation u</p>
-                 </div>
-                 <div class="col-lg-3 col-sm-6">
-                    <h2 class="useful_text">Menus</h2>
-                    <div class="footer_links">
-                       <ul>
-                          <li><a href="index.html">Home</a></li>
-                          <li><a href="about.html">About</a></li>
-                          <li><a href="services.html">Services</a></li>
-                          <li><a href="pricing.html">Pricing</a></li>
-                          <li><a href="contact.html">Contact us</a></li>
-                       </ul>
-                    </div>
-                 </div>
-                 <div class="col-lg-3 col-sm-6">
-                    <h2 class="useful_text">Useful Link</h2>
-                    <div class="footer_links">
-                       <ul>
-                          <li><a href="#">Adipiscing</a></li>
-                          <li><a href="#">Elit, sed do</a></li>
-                          <li><a href="#">Eiusmod </a></li>
-                          <li><a href="#">Tempor </a></li>
-                          <li><a href="#">incididunt</a></li>
-                       </ul>
-                    </div>
-                 </div>
-                 <div class="col-lg-3 col-sm-6">
-                    <h2 class="useful_text">Contact us</h2>
-                    <div class="addres_link">
-                       <ul>
-                          <li><a href="#"><img src="/images/map-icon.png"><span class="padding_left_10">No.123 Chalingt Gates</span></a></li>
-                          <li><a href="#"><img src="/images/call-icon.png"><span class="padding_left_10">+01 1234567890</span></a></li>
-                          <li><a href="#"><img src="/images/mail-icon.png"><span class="padding_left_10">demo&amp;#64;gmail.com</span></a></li>
-                       </ul>
-                    </div>
-                 </div>
-              </div>
-              <h1 class="follow_text">Follow Us</h1>
-              <div class="social_icon">
-                 <ul>
-                    <li><a href="#"><img src="images/fb-icon.png"></a></li>
-                    <li><a href="#"><img src="images/twitter-icon.png"></a></li>
-                    <li><a href="#"><img src="images/linkedin-icon.png"></a></li>
-                    <li><a href="#"><img src="images/instagram-icon.png"></a></li>
-                 </ul>
-              </div>
-           </div>
-        </div>
-     </div>
-     <!-- footer section end -->  
-     <!-- copyright section start -->
-     <div class="copyright_section">
-        <div class="container">
-           <p class="copyright_text">Copyright 2019 All Right Reserved By.<a href="https://html.design"> Free  html Templates</a></p>
-        </div>
-     </div>
-     <!-- copyright section end -->    
+<!-- sección de pie de página inicio --> 
+<div class="footer_section layout_padding">
+   <div class="container">
+      <div class="newsletter_section">
+         <div class="newsletter_left">
+            <div class="footer_logo"><img src="/images/footer-logo.png" alt="Logo del pie de página"></div>
+         </div>
+         <div class="newsletter_right">
+            <h5 class="newsletter_taital">Suscríbete al Boletín</h5>
+            <div class="subscribe_main">
+               <input type="text" class="mail_text" placeholder="Ingresa tu email" name="text">
+               <div class="subscribe_bt"><a href="#">Suscribirse</a></div>
+            </div>
+         </div>
+      </div>
+      <div class="footer_taital_main">
+         <div class="row">
+            <div class="col-lg-3 col-sm-6">
+               <h2 class="useful_text">Nosotros</h2>
+               <p class="ipsum_text">Somos una empresa dedicada a brindar la mejor experiencia de té, con productos de alta calidad y un servicio excepcional.</p>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+               <h2 class="useful_text">Menús</h2>
+               <div class="footer_links">
+                  <ul>
+                     <li><a href="index.html">Inicio</a></li>
+                     <li><a href="about.html">Nosotros</a></li>
+                     <li><a href="services.html">Servicios</a></li>
+                     <li><a href="pricing.html">Precios</a></li>
+                     <li><a href="contact.html">Contáctanos</a></li>
+                  </ul>
+               </div>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+               <h2 class="useful_text">Enlaces Útiles</h2>
+               <div class="footer_links">
+                  <ul>
+                     <li><a href="#">Términos y Condiciones</a></li>
+                     <li><a href="#">Política de Privacidad</a></li>
+                     <li><a href="#">FAQs</a></li>
+                     <li><a href="#">Soporte</a></li>
+                     <li><a href="#">Blog</a></li>
+                  </ul>
+               </div>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+               <h2 class="useful_text">Contáctanos</h2>
+               <div class="addres_link">
+                  <ul>
+                     <li><a href="#"><img src="/images/map-icon.png" alt="Mapa"><span class="padding_left_10">No.123 Calle de los Puertos</span></a></li>
+                     <li><a href="#"><img src="/images/call-icon.png" alt="Teléfono"><span class="padding_left_10">+01 1234567890</span></a></li>
+                     <li><a href="#"><img src="/images/mail-icon.png" alt="Correo"><span class="padding_left_10">info&#64;ejemplo.com</span></a></li>
+                  </ul>
+               </div>
+            </div>
+         </div>
+         <h1 class="follow_text">Síguenos</h1>
+         <div class="social_icon">
+            <ul>
+               <li><a href="#"><img src="/images/fb-icon.png" alt="Facebook"></a></li>
+               <li><a href="#"><img src="/images/twitter-icon.png" alt="Twitter"></a></li>
+               <li><a href="#"><img src="/images/linkedin-icon.png" alt="LinkedIn"></a></li>
+               <li><a href="#"><img src="/images/instagram-icon.png" alt="Instagram"></a></li>
+            </ul>
+         </div>
+      </div>
+   </div>
+</div>
+<!-- sección de pie de página fin -->  
+<!-- sección de derechos de autor inicio -->
+<div class="copyright_section">
+   <div class="container">
+      <p class="copyright_text">Copyright 2024 Todos los Derechos Reservados por <a href="https://github.com/SamuzDev" target="_blank">SamuzDev</a></p>
+   </div>
+</div>
+<!-- sección de derechos de autor fin -->
